<resources>
    <string name="app_name">Challenge 52</string>

    <!-- Menu -->
    <string name="navigation_menu_goals">Goals</string>
    <string name="navigation_menu_done">Done</string>
    <string name="navigation_menu_help">Help</string>
    <string name="navigation_menu_options">Options</string>

    <!-- Goals List -->
    <string name="goals_list_my_goals">My Goals</string>
    <string name="goals_list_no_goals">There are no goals registered at the moment. Do you want to create the first one
        right now?
    </string>
    <string name="goals_list_error">An error has occurred, try again clicking here or contact the developer.</string>
    <string name="goals_list_weeks_remaining">Remaining weeks:</string>
    <string name="goals_list_how_much">How much:</string>
    <string name="goals_list_start_date">Start date:</string>
    <string name="goals_list_end_date">End date:</string>
    <string name="goals_list_progress">Progress:</string>
    <string name="goals_list_progress_value_percent">%</string>

    <string name="goals_list_a_goal_has_been_created">Goal has been created.</string>
    <string name="goals_list_a_goal_has_been_deleted">Goal has been deleted.</string>
    <plurals name="goals_list_goals_has_has_been_deleted">
        <item quantity="one">One goal has been deleted.</item>
        <item quantity="other">Goals has been deleted.</item>
    </plurals>
    <string name="goals_list_a_goal_has_been_updated">Goal has been updated.</string>
    <string name="goals_list_a_goal_has_been_moved_to_done">Goal has been moved to done.</string>

    <!-- Done List -->
    <string name="done_goals_list_title">Done goals</string>
    <string name="done_goals_list_none_result">There are no done goals for a while. When you reach a goal, then you can
        put the completed one here.
    </string>
    <string name="done_goals_list_error">An error has occurred when try to load list, try again clicking here or contact
        the developer.
    </string>
    <string name="done_goals_list_start_date">Start date:</string>
    <string name="done_goals_list_end_date">End date:</string>
    <string name="done_goals_list_progress">Progress:</string>
    <string name="done_goals_list_progress_value_percent">%</string>

    <!-- Goal Create -->
    <string name="goal_create_new_goal">New goal</string>
    <string name="goal_create_goal_name">What is the name of your goal?</string>
    <string name="goal_create_goal_value">How much to offer?</string>
    <string name="goal_create_goal_data">When do you want to start?</string>
    <string name="goal_create_create_goal">Create goal</string>
    <string name="goal_create_calendar_choose_date">Choose date</string>
    <string name="goal_create_calendar_select_date">Select date</string>

    <!-- Goal Details -->
    <string name="goal_details_week">Week %s</string>
    <string name="goal_details_weeks">Weeks:</string>
    <string name="goal_details_goal">Goal reached:</string>
    <string name="goal_details_of_weeks">of %s weeks</string>
    <string name="goal_details_of_money">of %s</string>

    <string name="goal_details_edit_name">Edit name</string>
    <string name="goal_details_remove">Remove</string>
    <string name="goal_details_make_it_done">Make it done</string>

    <string name="goal_details_are_you_sure_remove">Are you sure to remove goal?</string>
    <plurals name="goal_details_are_you_sure_removes">
        <item quantity="one">Are you sure to remove this selected goal?</item>
        <item quantity="other">Are you sure to remove these selected goals?</item>
    </plurals>
    <string name="goal_details_are_you_sure_done">Are you sure to make goal done?</string>
    <string name="goal_details_cannot_move_to_done">You cannot move goal to done until you complete all weeks.</string>
    <string name="goal_details_move_to_done_first_dialog">All the weeks has been completed and the money has been deposited. Do you want to move this
        goal to done?
    </string>
    <string name="goal_details_date_after_today">This date is posterior than today. Do you even want to confirm the
        money is deposited for this week?
    </string>

    <!-- Patterns -->
    <string name="currency_mask">[$,.]</string>
    <string name="date_pattern">yyyy/MM/dd</string>

    <!-- Error -->
    <string name="goal_warning_title">Warning</string>
    <string name="goal_oops_title">Oops!</string>
    <string name="goal_error_button_go_back">Go back</string>
    <string name="goals_generic_error">An error has occurred, try again or contact the
        developer.
    </string>
    <string name="goals_list_error_delete">An error has occurred when try to remove goal, try again or contact the
        developer.
    </string>
    <string name="goal_create_error_message">An error has occurred when try to create goal, try again or contact the
        developer.
    </string>
    <string name="goal_details_list_error_message">An error has occurred when try to detail goal, try again or contact
        the developer.
    </string>
    <string name="goal_details_update_error_message">An error has occurred when try to update week, try again or contact
        the developer.
    </string>
    <string name="goal_details_remove_error_message">An error has occurred when try to remove goal, try again or contact
        the developer.
    </string>
    <string name="goal_details_make_done_error_message">An error has occurred when try to make goal done, try again or
        contact
        the developer.
    </string>
</resources>
