<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/details_edit"
            android:orderInCategory="100"
            android:title="@string/goal_details_edit_name"
            android:icon="@drawable/ic_edit"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/details_done"
            android:orderInCategory="100"
            android:title="@string/goal_details_make_it_done"
            android:icon="@drawable/ic_done_goal"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/details_remove"
            android:orderInCategory="100"
            android:title="@string/goal_details_remove"
            android:icon="@drawable/ic_remove"
            app:showAsAction="ifRoom"/>
</menu>