<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.goalslist.ui.fragment.GoalsListFragment">
    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_goals"
        android:orderInCategory="100"
        android:title="@string/navigation_menu_goals"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help"
        android:orderInCategory="100"
        android:title="@string/navigation_menu_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_options"
        android:icon="@drawable/ic_options"
        android:orderInCategory="100"
        android:title="@string/navigation_menu_options"
        app:showAsAction="never" />
</menu>
