<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/colorSofterGreyTwo">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_business_man"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.1"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtMessageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_twenty"
                    android:layout_marginTop="@dimen/margin_forty_five"
                    android:layout_marginStart="@dimen/margin_thirty_eight"
                    android:layout_marginEnd="@dimen/margin_thirty_eight"
                    app:layout_constraintTop_toBottomOf="@+id/imgError"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/goal_oops_title"/>


            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_twenty"
                    android:layout_marginTop="@dimen/margin_four"
                    android:layout_marginStart="@dimen/margin_thirty_eight"
                    android:layout_marginEnd="@dimen/margin_thirty_eight"
                    app:layout_constraintTop_toBottomOf="@+id/txtMessageTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/goals_generic_error"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGoBack"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/goal_error_button_go_back"
                    android:background="@drawable/selector_button"
                    android:textSize="@dimen/text_eighteen"
                    android:layout_marginTop="@dimen/margin_sixteen"
                    android:layout_marginBottom="@dimen/margin_twenty_four"
                    android:layout_marginStart="@dimen/margin_sixteen"
                    android:layout_marginEnd="@dimen/margin_sixteen"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>