<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:stateListAnimator="@null"
            app:expanded="false"
            style="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsing_size_goals_list"
                app:expandedTitleMarginTop="@dimen/margin_forty"
                app:expandedTitleGravity="start"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:scrollbarStyle="insideOverlay"
                app:expandedTitleTextAppearance="@style/TextAppearance.Expanded"
                app:collapsedTitleTextAppearance="@style/TextAppearance.Collapsed"
                app:contentScrim="?colorPrimary">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:scaleType="centerCrop"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:title="@string/goals_list_my_goals"
                    style="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:behavior_overlapTop="@dimen/margin_ninety"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:showIn="@layout/fragment_goals_list"
            tools:context=".feature.goalslist.ui.fragment.GoalsListFragment">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGoalsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/item_goal"
                android:visibility="gone"
                tools:visibility="visible"/>

        <!-- No Goals show -->
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNoGoalsFirst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/goals_list_no_goals"
                android:layout_marginStart="@dimen/margin_twenty_four"
                android:layout_marginEnd="@dimen/margin_twenty_four"
                android:layout_marginTop="@dimen/margin_thirty_eight"
                android:textSize="@dimen/text_twenty_four"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgNoGoals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_coin"
                android:layout_marginTop="@dimen/margin_forty"
                app:layout_constraintTop_toBottomOf="@+id/txtNoGoalsFirst"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="gone"/>

        <!-- Error show -->
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/goals_list_error"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/margin_twenty_four"
                android:layout_marginEnd="@dimen/margin_twenty_four"
                android:layout_marginTop="@dimen/margin_thirty_eight"
                android:textSize="@dimen/text_twenty_four"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_error"
                android:layout_marginTop="@dimen/margin_forty"
                app:layout_constraintTop_toBottomOf="@+id/txtError"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="gone"/>

        <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_sixteen"
            android:tint="@color/colorWhite"
            app:backgroundTint="@color/colorPrimary"
            app:rippleColor="@color/colorAccent"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_input_add"
            android:focusable="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_sixteen"
            android:tint="@color/colorWhite"
            app:backgroundTint="@color/colorRed"
            app:rippleColor="@color/colorAccent"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_delete"
            android:visibility="gone"
            android:focusable="true"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>